Fix Veripay integration: payment sync, UI fixes, and cleanup

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,11 @@ CONTENT_ENCRYPTION_KEY=super_secret_key_needs_to_be_32_bytes_long
 
 # Base URL
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
+
+# Payment Gateway (MOCK or VERIPAY)
+PAYMENT_GATEWAY=VERIPAY
+
+# Veripay Configuration
+VERIPAY_API_KEY=your_veripay_api_key
+VERIPAY_SECRET_KEY=your_veripay_secret_key
+VERIPAY_BASE_URL=https://veripay.site/api/v1
