--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:ui": "vitest --ui",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
+    "db:setup-indexes": "npx tsx scripts/setup-indexes.ts",
     "prepare": "husky"
   },
   "lint-staged": {
