--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.1",
     "next": "16.1.1",
+    "next-swagger-doc": "^0.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "swagger-ui-react": "^5.31.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
@@ -46,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/swagger-ui-react": "^5.18.0",
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/coverage-v8": "^4.0.16",
     "eslint": "^9",
