feat: add mailgun email notifications, admin settings, and fix e2e tests

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ PAYMENT_GATEWAY=VERIPAY
 VERIPAY_API_KEY=your_veripay_api_key
 VERIPAY_SECRET_KEY=your_veripay_secret_key
 VERIPAY_BASE_URL=https://veripay.site/api/v1
+
+# Mailgun Configuration (for order confirmation emails)
+# Get API key from https://app.mailgun.com/app/sending/domains
+MAILGUN_API_KEY=your_mailgun_api_key
+# Note: Email settings (domain, sender, templates) are configured in Admin Dashboard > Email Settings
