feat: integrate Midtrans payment gateway and update checkout flow

--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,19 @@ CONTENT_ENCRYPTION_KEY=super_secret_key_needs_to_be_32_bytes_long
 # Base URL
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# Payment Gateway (MOCK or VERIPAY)
+# Payment Gateway (MOCK, VERIPAY, or MIDTRANS)
 PAYMENT_GATEWAY=VERIPAY
 
 # Veripay Configuration
 VERIPAY_API_KEY=your_veripay_api_key
 VERIPAY_SECRET_KEY=your_veripay_secret_key
 VERIPAY_BASE_URL=https://veripay.site/api/v1
+
+# Midtrans Configuration
+# Get keys from https://dashboard.midtrans.com
+MIDTRANS_SERVER_KEY=your_midtrans_server_key
+MIDTRANS_CLIENT_KEY=your_midtrans_client_key
+MIDTRANS_IS_PRODUCTION=false
 
 # Mailgun Configuration (for order confirmation emails)
 # Get API key from https://app.mailgun.com/app/sending/domains
