Integrate Pakasir payment gateway and fix serialization issues

--- a/.env.example
+++ b/.env.example
@@ -1,33 +1,34 @@
 
-# MongoDB Connection String
-MONGODB_URI=mongodb+srv://user:pass@cluster.mongodb.net/?retryWrites=true&w=majority
-
-# Admin Authentication
-ADMIN_PASSWORD=change_this_password
-JWT_SECRET=longer_random_string_for_jwt_signing
-
-# Content Security
-# 32-byte key for AES-256 encryption (hex or base64 encoded)
-CONTENT_ENCRYPTION_KEY=super_secret_key_needs_to_be_32_bytes_long
-
-# Base URL
+# App
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
-# Payment Gateway (MOCK, VERIPAY, or MIDTRANS)
-PAYMENT_GATEWAY=VERIPAY
+# Database
+MONGODB_URI=mongodb://localhost:27017/autobeli
 
-# Veripay Configuration
-VERIPAY_API_KEY=your_veripay_api_key
-VERIPAY_SECRET_KEY=your_veripay_secret_key
+# Admin
+ADMIN_PASSWORD_HASH=
+
+# Auth
+AUTH_SECRET=changeme
+
+# Payment Gateways
+
+# 1. Mock (Development)
+# PAYMENT_GATEWAY=MOCK
+
+# 2. Veripay
+# PAYMENT_GATEWAY=VERIPAY
+VERIPAY_API_KEY=
+VERIPAY_SECRET_KEY=
 VERIPAY_BASE_URL=https://veripay.site/api/v1
 
-# Midtrans Configuration
-# Get keys from https://dashboard.midtrans.com
-MIDTRANS_SERVER_KEY=your_midtrans_server_key
-MIDTRANS_CLIENT_KEY=your_midtrans_client_key
+# 3. Midtrans
+# PAYMENT_GATEWAY=MIDTRANS
+MIDTRANS_SERVER_KEY=
+MIDTRANS_CLIENT_KEY=
 MIDTRANS_IS_PRODUCTION=false
 
-# Mailgun Configuration (for order confirmation emails)
-# Get API key from https://app.mailgun.com/app/sending/domains
-MAILGUN_API_KEY=your_mailgun_api_key
-# Note: Email settings (domain, sender, templates) are configured in Admin Dashboard > Email Settings
+# 4. Pakasir
+PAYMENT_GATEWAY=PAKASIR
+PAKASIR_API_KEY=
+PAKASIR_PROJECT_SLUG=
