--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "next-swagger-doc": "^0.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "recharts": "^3.6.0",
     "swagger-ui-react": "^5.31.0",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0",
